refactor estrutura projeto

--- a/src/Vaquinha.Service/Vaquinha.Service.csproj
+++ b/src/Vaquinha.Service/Vaquinha.Service.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <Compile Remove="AutoMapper\PolenToConvideDezenoveMappingProfile.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Vaquinha.Repository\Vaquinha.Repository.csproj" />
     <ProjectReference Include="..\Vaquinha.Payment\Vaquinha.Payment.csproj" />
   </ItemGroup>
