--- a/src/Vaquinha.MVC/Properties/launchSettings.json
+++ b/src/Vaquinha.MVC/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8849",
-      "sslPort": 44308
+      "applicationUrl": "http://localhost:60705",
+      "sslPort": 44317
     }
   },
   "profiles": {
@@ -18,7 +18,7 @@
     "Vaquinha.MVC": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
