--- a/src/Vaquinha.MVC/Vaquinha.MVC.csproj
+++ b/src/Vaquinha.MVC/Vaquinha.MVC.csproj
@@ -1,13 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <ItemGroup>
-    <ProjectReference Include="..\Vaquinha.Payment\Vaquinha.Payment.csproj" />
-    <ProjectReference Include="..\Vaquinha.Domain\Vaquinha.Domain.csproj" />
-    <ProjectReference Include="..\Vaquinha.Service\Vaquinha.Service.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Vaquinha.Domain\Vaquinha.Domain.csproj" />
+    <ProjectReference Include="..\Vaquinha.Service\Vaquinha.Service.csproj" />
+  </ItemGroup>
 
 </Project>
