--- a/src/Vaquinha.MVC/appsettings.json
+++ b/src/Vaquinha.MVC/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VaquinhaOnLineDIO": "Server=(localdb)\\mssqllocaldb;Database=VaquinhaOnLineDIO;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
