adicionado IoC config

--- a/src/Vaquinha.MVC/appsettings.json
+++ b/src/Vaquinha.MVC/appsettings.json
@@ -9,5 +9,33 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "VaquinhaOnLineDIO": "Server=(localdb)\\mssqllocaldb;Database=VaquinhaOnLineDIO;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "ConfiguracoesGeralAplicacao": {
+       "MetaCampanha": 30000,
+    "DataFimCampanha": "2020-07-31T00:00:00",
+    "OrdenacaoPadrao": "desc",
+    "QuantidadeRegistrosPaginacao": 39,
+    "CacheBuscaInstituicoesEmHoras": 10,
+    "CacheBuscaDoacoesEmSegundos": 10,
+    "CacheBuscaDadosTotaisEmSegundos": 10,
+    "Polen": {
+
+      "IsTest": true,
+
+      "CauseId": "fundo-convide19",
+      "StoreId": "marcosfreire",
+      "ApiToken": "f997f3c0-9c0a-430c-912c-19c401a46991",
+      "CampaignId": "89650328-856d-482a-a544-ee7b38b2fcff",
+
+      // Produção
+      "BaseUrlV1": "https://api.opolen.com.br/",
+      "BaseUrlV2": "https://storeapi.opolen.com.br/"
+
+    },
+    "Polly": {
+      "QuantidadeRetry": 3,
+      "TempoDeEsperaEmSegundos": 2
+    }
   }
 }
