--- a/src/Vaquinha.Payment/Vaquinha.Payment.csproj
+++ b/src/Vaquinha.Payment/Vaquinha.Payment.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
