implementado inmemory database

--- a/src/Vaquinha.MVC/appsettings.json
+++ b/src/Vaquinha.MVC/appsettings.json
@@ -7,10 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "VaquinhaOnLineDIO": "Server=(localdb)\\mssqllocaldb;Database=VaquinhaOnLineDIO;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-
   "ConfiguracoesGeralAplicacao": {
        "MetaCampanha": 30000,
     "DataFimCampanha": "2020-07-31T00:00:00",
@@ -21,18 +17,17 @@
     "CacheBuscaDadosTotaisEmSegundos": 10,
     "Polen": {
 
-      "IsTest": true,
-
       "CauseId": "fundo-convide19",
+      "Notes": "Testes integacrao",
       "StoreId": "marcosfreire",
-      "ApiToken": "f997f3c0-9c0a-430c-912c-19c401a46991",
-      "CampaignId": "89650328-856d-482a-a544-ee7b38b2fcff",
-
-      // Produção
-      "BaseUrlV1": "https://api.opolen.com.br/",
-      "BaseUrlV2": "https://storeapi.opolen.com.br/"
-
+      "ApiToken": "88db6a05-f7d9-4c3e-b6c5-d1400b70ff5b",
+      "CampaignId": "7ddb034d-7c03-4dc1-bebd-7417bb1acfcd",
+      "IsTest": true,
+      
+      "BaseUrlV1": "https://private-anon-520a0041ab-polen.apiary-mock.com/",
+      "BaseUrlV2": "https://storeapibeta.opolen.com.br/"
     },
+
     "Polly": {
       "QuantidadeRetry": 3,
       "TempoDeEsperaEmSegundos": 2
