--- a/src/Vaquinha.MVC/Vaquinha.MVC.csproj
+++ b/src/Vaquinha.MVC/Vaquinha.MVC.csproj
@@ -12,6 +12,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="NToastNotify" Version="6.1.3" />
   </ItemGroup>
 
   <ItemGroup>
