--- a/src/Vaquinha.Service/Vaquinha.Service.csproj
+++ b/src/Vaquinha.Service/Vaquinha.Service.csproj
@@ -6,12 +6,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Vaquinha.Repository\Vaquinha.Repository.csproj" />
-    <ProjectReference Include="..\Vaquinha.Payment\Vaquinha.Payment.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="NETCore.MailKit" Version="2.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="7.2.1" />
   </ItemGroup>
 
