--- a/tests/Vaquinha.Integration.Tests/Vaquinha.Integration.Tests.csproj
+++ b/tests/Vaquinha.Integration.Tests/Vaquinha.Integration.Tests.csproj
@@ -7,10 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Vaquinha.MVC\Vaquinha.MVC.csproj" />
+    <ProjectReference Include="..\..\src\Vaquinha.Repository\Vaquinha.Repository.csproj" />
+    <ProjectReference Include="..\..\src\Vaquinha.Domain\Vaquinha.Domain.csproj" />
   </ItemGroup>
 
 </Project>
