--- a/tests/Vaquinha.Automated.UI.Tests/Vaquinha.Automated.UI.Tests.csproj
+++ b/tests/Vaquinha.Automated.UI.Tests/Vaquinha.Automated.UI.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -17,6 +18,10 @@
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="System.Security.Permissions" Version="4.7.0" />
     
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Vaquinha.Tests.Common\Vaquinha.Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
