--- a/tests/Vaquinha.Unit.Tests/Vaquinha.Unit.Tests.csproj
+++ b/tests/Vaquinha.Unit.Tests/Vaquinha.Unit.Tests.csproj
@@ -12,8 +12,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.14.1" />
     <PackageReference Include="NToastNotify" Version="6.1.3" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\..\src\Vaquinha.Service\Vaquinha.Service.csproj" />
     <ProjectReference Include="..\..\src\Vaquinha.Repository\Vaquinha.Repository.csproj" />
     <ProjectReference Include="..\..\src\Vaquinha.Domain\Vaquinha.Domain.csproj" />
+    <ProjectReference Include="..\Vaquinha.Tests.Common\Vaquinha.Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
