--- a/src/Vaquinha.MVC/Properties/launchSettings.json
+++ b/src/Vaquinha.MVC/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "Vaquinha.MVC": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
